--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
       this specification uses that specification and terminology.</p>
     </section>
 
+    <section id="ack">
+      <h2>Acknowledgements</h2>
 
+      <p>The following people have contributed directly to the developmment of this specification: Harald Alvestrand, Rick Byers, Dominique Hazael-Massieux (via the HTML5Apps project), Philip Jägenstedt, Victoria Kirst,  Shijun Sun, Martin Thomson, Chris Wilson.</p>
+    </section>
   </body>
 </html>
