--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </section>
         <section id="algorithms-new-sink-available">
           <h4>New sink available</h4>
-          <p>New audio devices may become available to the user agent, or an audio device (identified by <a href="#widl-HTMLMediaElement-sinkId" class="idlType"><code>HTMLMediaElement.sinkId</code></a>) that had previously become <a href="#algorithms-sink-unavailable">unavailable</a> may become available again, for example, if it is unplugged and later plugged back in.</a></p>
+          <p>New audio devices may become available to the user agent, or an audio device (identified by <a href="#widl-HTMLMediaElement-sinkId" class="idlType"><code>HTMLMediaElement.sinkId</code></a>) that had previously become <a href="#algorithms-sink-unavailable">unavailable</a> may become available again, for example, if it is unplugged and later plugged back in.</p>
           <p>In this scenario, the user agent must run the following steps:</p>
           <ol class="method-algorithm">
             <li><p>Let <var>sinkId</var> be the identifier for the newly available device.</p></li>
@@ -113,7 +113,7 @@
           <ul>
             <li>If no <code>sinkId</code> is provided, use the default device of the user agent.</li>
             <li>If <code>sinkId</code> is the empty string, use the default device of the user agent.</li>
-            <li>If the <code>sinkId</code> does not match any audio output device identified by <a href="http://dev.w3.org/2011/webrtc/editor/archives/20140619/getusermedia.html#dom-mediadevices-enumeratedevices"><code>enumerateDevices()</code></a>, throw a DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#notfounderror"><code>NotFoundError</code></a>.</li>
+            <li>If the <code>sinkId</code> does not match any audio output device identified by <a href="http://dev.w3.org/2011/webrtc/editor/archives/20140619/getusermedia.html#dom-mediadevices-enumeratedevices"><code>enumerateDevices()</code></a>, throw a DOMException whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#notfounderror"><code>NotFoundError</code></a>.</li>
             <li>If the application is not authorized to play audio through the device identified by the given <code>sinkId</code>, throw a <a href="http://www.w3.org/TR/html5/infrastructure.html#domexception"><code>DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#securityerror"><code>SecurityError</code></a>.</li>
             <li>If the device identified by the given <code>sinkId</code> cannot be used due to a unspecified error, throw a <a href="http://www.w3.org/TR/html5/infrastructure.html#domexception"><code>DOMException</code></a> whose name is <a href="http://www.w3.org/TR/html5/infrastructure.html#aborterror"><code>AbortError</code></a>.</li>
           </ul>
